--- a/book/math_foundations/labo/python.ipynb
+++ b/book/math_foundations/labo/python.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -390,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -467,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -495,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -559,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -619,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -646,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -688,7 +688,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43md\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmonkey\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)  \u001b[38;5;66;03m# KeyError: 'monkey' not a key of d\u001b[39;00m\n",
+            "Cell \u001b[0;32mIn[69], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43md\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmonkey\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)  \u001b[38;5;66;03m# KeyError: 'monkey' not a key of d\u001b[39;00m\n",
             "\u001b[0;31mKeyError\u001b[0m: 'monkey'"
           ]
         }
@@ -699,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -708,7 +708,16 @@
         "id": "8TjbEWqML9gl",
         "outputId": "ef14d05e-401d-4d23-ed1a-0fe6b4c77d6f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "N/A\n",
+            "wet\n"
+          ]
+        }
+      ],
       "source": [
         "print(d.get(\"monkey\", \"N/A\"))  # Get an element with a default; prints \"N/A\"\n",
         "print(d.get(\"fish\", \"N/A\"))  # Get an element with a default; prints \"wet\""
@@ -716,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -725,7 +734,15 @@
         "id": "0EItdNBJL9go",
         "outputId": "652a950f-b0c2-4623-98bd-0191b300cd57"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "N/A\n"
+          ]
+        }
+      ],
       "source": [
         "del d[\"fish\"]  # Remove an element from a dictionary\n",
         "print(d.get(\"fish\", \"N/A\"))  # \"fish\" is no longer a key; prints \"N/A\""
@@ -733,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -742,7 +759,17 @@
         "id": "rYfz7ZKNL9gs",
         "outputId": "155bdb17-3179-4292-c832-8166e955e942"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A person has 2 legs\n",
+            "A cat has 4 legs\n",
+            "A spider has 8 legs\n"
+          ]
+        }
+      ],
       "source": [
         "d = {\"person\": 2, \"cat\": 4, \"spider\": 8}\n",
         "for animal, legs in d.items():\n",
@@ -760,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -769,7 +796,15 @@
         "id": "8PB07imLL9gz",
         "outputId": "e9ddf886-39ed-4f35-dd80-64a19d2eec9b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0: 0, 2: 4, 4: 16}\n"
+          ]
+        }
+      ],
       "source": [
         "nums = [0, 1, 2, 3, 4]\n",
         "even_num_to_square = {x: x**2 for x in nums if x % 2 == 0}\n",
@@ -788,7 +823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -797,7 +832,16 @@
         "id": "MmyaniLsL9g2",
         "outputId": "8f152d48-0a07-432a-cf98-8de4fd57ddbb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
         "animals = {\"cat\", \"dog\"}\n",
         "print(\"cat\" in animals)  # Check if an element is in a set; prints \"True\"\n",
@@ -806,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -815,7 +859,16 @@
         "id": "ElJEyK86L9g6",
         "outputId": "b9d7dab9-5a98-41cd-efbc-786d0c4377f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         "animals.add(\"fish\")  # Add an element to a set\n",
         "print(\"fish\" in animals)\n",
@@ -824,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -833,7 +886,16 @@
         "id": "5uGmrxdPL9g9",
         "outputId": "e644d24c-26c6-4b43-ab15-8aa81fe884d4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "animals.add(\"cat\")  # Adding an element that is already in the set does nothing\n",
         "print(len(animals))\n",
@@ -853,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -862,7 +924,17 @@
         "id": "K47KYNGyL9hA",
         "outputId": "4477f897-4355-4816-b39b-b93ffbac4bf0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "#1: fish\n",
+            "#2: dog\n",
+            "#3: cat\n"
+          ]
+        }
+      ],
       "source": [
         "animals = {\"cat\", \"dog\", \"fish\"}\n",
         "for idx, animal in enumerate(animals):\n",
@@ -880,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -889,7 +961,15 @@
         "id": "iw7k90k3L9hC",
         "outputId": "72d6b824-6d31-47b2-f929-4cf434590ee5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0, 1, 2, 3, 4, 5}\n"
+          ]
+        }
+      ],
       "source": [
         "from math import sqrt\n",
         "\n",
@@ -908,7 +988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -917,7 +997,17 @@
         "id": "9wHUyTKxL9hH",
         "outputId": "cdc5f620-04fe-4b0b-df7a-55b061d23d88"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'tuple'>\n",
+            "5\n",
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "d = {(x, x + 1): x for x in range(10)}  # Create a dictionary with tuple keys\n",
         "t = (5, 6)  # Create a tuple\n",
@@ -928,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -937,7 +1027,19 @@
         "id": "HoO8zYKzL9hJ",
         "outputId": "28862bfc-0298-40d7-f8c4-168e109d2d93"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'tuple' object does not support item assignment",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[80], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mt\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ],
       "source": [
         "t[0] = 1"
       ]
@@ -953,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -962,7 +1064,17 @@
         "id": "kiMDUr58L9hN",
         "outputId": "9f53bf9a-7b2a-4c51-9def-398e4677cd6c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "negative\n",
+            "zero\n",
+            "positive\n"
+          ]
+        }
+      ],
       "source": [
         "def sign(x):\n",
         "    if x > 0:\n",
@@ -988,7 +1100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -997,7 +1109,16 @@
         "id": "PfsZ3DazL9hR",
         "outputId": "6e6af832-67d8-4d8c-949b-335927684ae3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, Bob!\n",
+            "HELLO, FRED\n"
+          ]
+        }
+      ],
       "source": [
         "def hello(name, loud=False):\n",
         "    if loud:\n",
@@ -1021,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1030,7 +1151,16 @@
         "id": "RWdbaGigL9hU",
         "outputId": "4f6615c5-75a7-4ce4-8ea1-1e7f5e4e9fc3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, Fred!\n",
+            "HELLO, FRED\n"
+          ]
+        }
+      ],
       "source": [
         "class Greeter:\n",
         "    # Constructor\n",
