--- a/book/math_foundations/linalg/basis_ops.ipynb
+++ b/book/math_foundations/linalg/basis_ops.ipynb
@@ -5,7 +5,9 @@
             "id": "6c7a6615",
             "metadata": {},
             "source": [
-                "# Simpele operaties\n",
+                "# Element-gewijze operaties\n",
+                "Hier beschrijven we de basis operaties optellen/aftrekken en vermenigvuldigen/delen (producten) waarbij de operatie _element-gewijs_ wordt toegepast.\n",
+                "We zullen later zien dat producten tussen tensors speciale vormen kunnen aannemen. **Bij element-gewijze operaties tussen tensors impliceert dit dat de dimensionaliteit moet kloppen**. Denk aan lego blokken die op elkaar moeten passen.\n",
                 "## Scalair optellen\n",
                 "$$\n",
                 "\\pmb{a} + b = \\begin{bmatrix}\n",
@@ -48,7 +50,7 @@
                 "\n",
                 "## Optellen\n",
                 ":::{warning} $ $\n",
-                "Enkel bij gelijke dimensies.\n",
+                "Enkel bij passende dimensies.\n",
                 ":::\n",
                 "als\n",
                 "$$\n",
@@ -98,6 +100,38 @@
                 "A_{i,1} + B_{i,1} & \\ldots & A_{i,j} + B_{i,j} & \\ldots & A_{i,n} + B_{i,n} \\cr\n",
                 "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
                 "A_{m,1} + B_{m,1} & \\ldots & A_{m,j} + B_{m,j} & \\ldots & A_{m,n} + B_{m,n}\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "en\n",
+                "$$\n",
+                "\\pmb{A}^T + \\pmb{b} = \\begin{bmatrix}\n",
+                "A_{1,1} + b_1 & \\ldots & A_{1, i} + b_1 & \\ldots & A_{1, m} + b_1 \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{j, 1} + b_2 & \\ldots & A_{j,i} + b_2 & \\ldots & A_{j,m} + b_2 \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{n,1} + b_n & \\ldots & A_{n,i} + b_n & \\ldots & A_{n,m} + b_n\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "## Element-gewijs product\n",
+                "Dit is het zogenaamde _Hadamard_ product. Let op het speciale symbool voor de operatie!\n",
+                "\n",
+                "$$\n",
+                "\\pmb{a} \\odot \\pmb{b} = \\begin{bmatrix}\n",
+                "a_1 \\times b_1 \\cr\n",
+                "a_2 \\times b_2 \\cr\n",
+                "\\vdots  \\cr\n",
+                "a_n \\times b_n\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "$$\n",
+                "\\pmb{A} \\odot \\pmb{B} = \\begin{bmatrix}\n",
+                "A_{1,1} \\times B_{1,1} & \\ldots & A_{1,j} \\times B_{1,j} & \\ldots & A_{1,n} \\times B_{1,n}\\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{i,1} \\times B_{i,1} & \\ldots & A_{i,j} \\times B_{i,j} & \\ldots & A_{i,n} \\times B_{i,n} \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{m,1} \\times B_{m,1} & \\ldots & A_{m,j} \\times B_{m,j} & \\ldots & A_{m,n} \\times B_{m,n}\n",
                 "\\end{bmatrix}\n",
                 "$$"
             ]
