--- a/book/math_foundations/linalg/tensors.ipynb
+++ b/book/math_foundations/linalg/tensors.ipynb
@@ -26,7 +26,7 @@
                 "\n",
                 "## Vectoren\n",
                 "**Een vector is een geordende reeks van getallen van éénzelfde type**. Ieder individueel getal wordt geïdentificeerd door de _index_ binnen de ordening (startend bij $1$).\n",
-                "Een vector duiden we in kleine letters en in het vet aan, bv. $\\pmb{x}$. Het eerste element duiden we aan met $x_1$, het laatste met $x_n$. Wanneer we de elementen expliciet willen voorstellen,\n",
+                "**Een vector duiden we in kleine letters en in het vet aan**, bv. $\\pmb{x}$. Het eerste element duiden we aan met $x_1$, het laatste met $x_n$. Wanneer we de elementen expliciet willen voorstellen,\n",
                 "gebruiken we een kolom met vierkante haakjes: \n",
                 "$$\n",
                 "\\pmb{x} = \\begin{bmatrix}\n",
@@ -37,14 +37,14 @@
                 "x_n\n",
                 "\\end{bmatrix}\n",
                 "$$\n",
-                "Om het type aan te duiden gebruiken we bv. $\\mathbb{R}^n$. \n",
-                "We kunnen vectoren zien als de coordinaten van individuele punten in een $n$-dimensionele ruimte."
+                "Om het type aan te duiden gebruiken we bv. $\\pmb{x} \\isin \\mathbb{R}^n$.  \n",
+                "Vectoren laten ons toe om verschillende waarden van eenzelfde variabele samen voor te stellen. Dat maakt bijvoorbeeld in een programmeertaal als Python al een wereld van verschil."
             ]
         },
         {
             "cell_type": "code",
             "execution_count": 1,
-            "id": "cdaad223",
+            "id": "8aae2649",
             "metadata": {},
             "outputs": [],
             "source": [
@@ -54,7 +54,59 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 13,
+            "id": "6dcd9429",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[5, 8, 12, 3]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Without vectorization\n",
+                "a_1 = 5\n",
+                "a_2 = 8\n",
+                "a_3 = 12\n",
+                "# ...\n",
+                "a_100 = 3\n",
+                "print([a_1, a_2, a_3, a_100])"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "id": "06f7f953",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[ 5  8 12  3]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# With vectorization\n",
+                "a = np.array([5, 8, 12, 3])\n",
+                "print(a)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "3c79a1c0",
+            "metadata": {},
+            "source": [
+                "**We kunnen vectoren zien als de coordinaten van individuele punten in een $n$-dimensionele ruimte.**"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 4,
             "id": "vector_3d_viz",
             "metadata": {},
             "outputs": [
@@ -990,8 +1042,8 @@
             ],
             "source": [
                 "# Define two points in 3D space as vectors\n",
-                "vector_a = np.array([2, 3, 1])  # Point A: (2, 3, 1)\n",
-                "vector_b = np.array([4, 1, 5])  # Point B: (4, 1, 5)\n",
+                "a = np.array([2, 3, 1])  # Point A: (2, 3, 1)\n",
+                "b = np.array([4, 1, 5])  # Point B: (4, 1, 5)\n",
                 "\n",
                 "# Create traces for the 3D plot\n",
                 "traces = []\n",
@@ -1012,14 +1064,14 @@
                 "# Add point A\n",
                 "traces.append(\n",
                 "    go.Scatter3d(\n",
-                "        x=[vector_a[0]],\n",
-                "        y=[vector_a[1]],\n",
-                "        z=[vector_a[2]],\n",
+                "        x=[a[0]],\n",
+                "        y=[a[1]],\n",
+                "        z=[a[2]],\n",
                 "        mode=\"markers+text\",\n",
                 "        marker={\"size\": 8, \"color\": \"red\"},\n",
                 "        text=[\"A\"],\n",
                 "        textposition=\"middle right\",\n",
-                "        name=f\"Point A {tuple(vector_a)}\",\n",
+                "        name=f\"Point A {tuple(a)}\",\n",
                 "        showlegend=True,\n",
                 "    )\n",
                 ")\n",
@@ -1027,14 +1079,14 @@
                 "# Add point B\n",
                 "traces.append(\n",
                 "    go.Scatter3d(\n",
-                "        x=[vector_b[0]],\n",
-                "        y=[vector_b[1]],\n",
-                "        z=[vector_b[2]],\n",
+                "        x=[b[0]],\n",
+                "        y=[b[1]],\n",
+                "        z=[b[2]],\n",
                 "        mode=\"markers+text\",\n",
                 "        marker={\"size\": 8, \"color\": \"blue\"},\n",
                 "        text=[\"B\"],\n",
                 "        textposition=\"middle right\",\n",
-                "        name=f\"Point B {tuple(vector_b)}\",\n",
+                "        name=f\"Point B {tuple(b)}\",\n",
                 "        showlegend=True,\n",
                 "    )\n",
                 ")\n",
@@ -1043,9 +1095,9 @@
                 "# Vector A arrow\n",
                 "traces.append(\n",
                 "    go.Scatter3d(\n",
-                "        x=[0, vector_a[0]],\n",
-                "        y=[0, vector_a[1]],\n",
-                "        z=[0, vector_a[2]],\n",
+                "        x=[0, a[0]],\n",
+                "        y=[0, a[1]],\n",
+                "        z=[0, a[2]],\n",
                 "        mode=\"lines\",\n",
                 "        line={\"color\": \"red\", \"width\": 6},\n",
                 "        name=\"Vector A\",\n",
@@ -1056,9 +1108,9 @@
                 "# Vector B arrow\n",
                 "traces.append(\n",
                 "    go.Scatter3d(\n",
-                "        x=[0, vector_b[0]],\n",
-                "        y=[0, vector_b[1]],\n",
-                "        z=[0, vector_b[2]],\n",
+                "        x=[0, b[0]],\n",
+                "        y=[0, b[1]],\n",
+                "        z=[0, b[2]],\n",
                 "        mode=\"lines\",\n",
                 "        line={\"color\": \"blue\", \"width\": 6},\n",
                 "        name=\"Vector B\",\n",
@@ -1093,48 +1145,114 @@
             "source": [
                 "## Matrices\n",
                 "Wanneer we bijvoorbeeld niet 1 maar $m$ punten in een $n$ dimensionale ruimte willen weergeven, kunnen we een **matrix** notatie gebruiken: $\\pmb{X} \\isin \\mathbb{R}^{mxn}$.\n",
-                "**Een matrix is een geordende reeks van vectoren**.\n",
+                "**Een matrix is een geordende reeks van vectoren**. **We duiden ze aan in het vet met een hoofdletter**, bv $\\pmb{X}$. Voor individuele elementen gebruiken we gewone hoofdletters, bv. $X_{2,4}$ \n",
                 "$$\n",
                 "\\pmb{X} = \\begin{bmatrix}\n",
-                "x_{1,1} & \\ldots & x_{1,j} & \\ldots & x_{1,n} \\cr\n",
+                "X_{1,1} & \\ldots & X_{1,j} & \\ldots & X_{1,n} \\cr\n",
                 "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
-                "x_{i,1} & \\ldots & x_{i,j} & \\ldots & x_{i,n} \\cr\n",
+                "X_{i,1} & \\ldots & X_{i,j} & \\ldots & X_{i,n} \\cr\n",
                 "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
-                "x_{m,1} & \\ldots & x_{m,j} & \\ldots & x_{m,n}\n",
+                "X_{m,1} & \\ldots & X_{m,j} & \\ldots & X_{m,n}\n",
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
                 "De rijen worden gevormd door **rij-vectoren**:\n",
                 "$$\n",
-                "\\pmb{x_i} = [x_{i, 1}, \\ldots, x_{i, j}, \\ldots, x_{i, n}]^T\n",
+                "\\pmb{x_i} = [X_{i, 1}, \\ldots, X_{i, j}, \\ldots, X_{i, n}]^T = \\begin{bmatrix}\n",
+                "X_{i, 1} \\cr\n",
+                "\\vdots  \\cr\n",
+                "X_{i, j} \\cr\n",
+                "\\vdots  \\cr\n",
+                "X_{i, n}\n",
+                "\\end{bmatrix}\n",
                 "$$\n",
                 "De kolommen worden gevormd door **kolom-vectoren**:\n",
                 "$$\n",
                 "\\pmb{x_j} = \\begin{bmatrix}\n",
-                "x_{1, j} \\cr\n",
+                "X_{1, j} \\cr\n",
                 "\\vdots  \\cr\n",
-                "x_{i, j} \\cr\n",
+                "X_{i, j} \\cr\n",
                 "\\vdots  \\cr\n",
-                "x_{n, j}\n",
+                "X_{m, j}\n",
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
                 "De notatie $\\ldots^T$ duidt op **transpositie** tussen rijen en kolommen.\n",
                 "$$\n",
                 "\\pmb{X^T} = \\begin{bmatrix}\n",
-                "x_{1,1} & \\ldots & x_{i,1} & \\ldots & x_{m,1} \\cr\n",
+                "X_{1,1} & \\ldots & X_{1, i} & \\ldots & X_{1, m} \\cr\n",
                 "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
-                "x_{1,j} & \\ldots & x_{i,j} & \\ldots & x_{m,j} \\cr\n",
+                "X_{j, 1} & \\ldots & X_{j,i} & \\ldots & X_{j,m} \\cr\n",
                 "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
-                "x_{1,n} & \\ldots & x_{i,n} & \\ldots & x_{m,n}\n",
+                "X_{n,1} & \\ldots & X_{n,i} & \\ldots & X_{n,m}\n",
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
                 "\n",
                 ":::{note} y, X\n",
-                "In machine learning worden (univariaat) target waarden doorgaans aangeduid met de _vector_ $\\pmb{y}$. Univariaat wil zeggen dat het over slechts 1 target gaat per input. Als over (univariaat) model outputs gaat,\n",
+                "In machine learning worden _target waarden_[^mlp] doorgaans aangeduid met de _vector_ $\\pmb{y}$. Als over _model outputs_[^mlp] gaat,\n",
                 "gebruiken we $\\pmb{\\hat{y}}$ om aan te duiden dat het over _schattingen_ gaat.  \n",
-                "De inputs worden aangeduid met de _matrix_ $\\pmb{X}$, waarbij de **rij-vector** $\\pmb{x_i} = [x_{i, 1}, \\ldots, x_{i, j}, \\ldots, x_{i, n}]^T$ de $i$-de input is.\n",
+                "De inputs worden aangeduid met de _matrix_ $\\pmb{X}$, waarbij de **rij-vector** $\\pmb{x_i} = [X_{i, 1}, \\ldots, X_{i, j}, \\ldots, X_{i, n}]^T$ de $i$-de input is.\n",
+                ":::\n",
+                "[^mlp]: Zie cursus ML Principles.\n",
+                "\n",
+                "Matrices laten ons toe om verschillende waarden (rijen) van verschillende variabelen (kolommen) samen voor te stellen. Opnieuw: dat maakt een wereld van verschil uit als we dit willen programmeren."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 14,
+            "id": "d69846c3",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[3, 2, 7], [3, 5, 10]]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Without matrices\n",
+                "a_1_1 = 3\n",
+                "a_1_2 = 2\n",
+                "a_1_3 = 7\n",
+                "a_2_1 = 3\n",
+                "a_2_2 = 5\n",
+                "a_2_3 = 10\n",
+                "print([[a_1_1, a_1_2, a_1_3], [a_2_1, a_2_2, a_2_3]])"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "id": "06f08a5b",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[ 3  2  7]\n",
+                        " [ 3  5 10]]\n",
+                        "Shape of a: (2, 3)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "a = np.array([[3, 2, 7], [3, 5, 10]])\n",
+                "print(a)\n",
+                "print(f\"Shape of a: {a.shape}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "b2438880",
+            "metadata": {},
+            "source": [
+                ":::{tip}\n",
+                "Hoewel het niet strikt verboden is, gebruiken we in Python code (meestal) ook kleine letters voor matrices - in lijn met de [_Style Guide for Python Code_](https://peps.python.org/pep-0008/).\n",
                 ":::"
             ]
         },
@@ -1145,14 +1263,30 @@
             "source": [
                 "\n",
                 "## Tensors\n",
-                "Wanneer we het concept van een matrix uitbreiden naar een **N-dimensionale _grid_ van vectoren**, spreken we van een **tensor**.  \n",
-                "We kunnen dit het best illustreren aan de hand van beeld-data. Een RGB-afbeelding bestaat uit een verzameling pixels die geordend zijn in een 2-dimensionale _grid_.\n",
-                "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig de _channels_: **R**ood, **G**roen, **B**lauw."
+                "Wanneer we het concept van een matrix uitbreiden naar een **N-dimensionale _grid_ van vectoren**, spreken we van een **tensor**."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "d711aa97",
+            "metadata": {},
+            "source": [
+                "![](../../../img/tensors.png)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "c64ba916",
+            "metadata": {},
+            "source": [
+                "We kunnen dit illustreren aan de hand van beeld-data. Een RGB-afbeelding bestaat uit een verzameling pixels die geordend zijn in een 2-dimensionale _grid_.\n",
+                "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig de _channels_: **R**ood, **G**roen, **B**lauw.\n",
+                "Het gaat hier dus over een 3D tensor. De waarden zitten in een raster met een _blok_ vorm (en dus niet in een _vlak_ raster zoals bij matrices)."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 5,
             "id": "9ea87774",
             "metadata": {},
             "outputs": [],
@@ -1163,7 +1297,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 6,
             "id": "0a5883b9",
             "metadata": {},
             "outputs": [
@@ -1188,7 +1322,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 7,
             "id": "852efeb1",
             "metadata": {},
             "outputs": [
@@ -1208,7 +1342,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 8,
             "id": "0d234abf",
             "metadata": {},
             "outputs": [
@@ -1234,7 +1368,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 9,
             "id": "c89e1573",
             "metadata": {},
             "outputs": [],
@@ -1244,7 +1378,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 10,
             "id": "fe063bab",
             "metadata": {},
             "outputs": [
@@ -1280,7 +1414,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 11,
             "id": "142ab085",
             "metadata": {},
             "outputs": [
@@ -1299,7 +1433,7 @@
                             "       [11,  5, 17]], dtype=uint8)"
                         ]
                     },
-                    "execution_count": 9,
+                    "execution_count": 11,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1311,7 +1445,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 12,
             "id": "879d150a",
             "metadata": {},
             "outputs": [
@@ -1321,7 +1455,7 @@
                             "array([27, 26, 31], dtype=uint8)"
                         ]
                     },
-                    "execution_count": 10,
+                    "execution_count": 12,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1329,6 +1463,37 @@
             "source": [
                 "# Single pixel vector\n",
                 "np.array(img)[-100, 100, :]"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "8de62d48",
+            "metadata": {},
+            "source": [
+                ":::{tip}\n",
+                "We hebben tot nu toe een 3D tensor met op het niveau van de pixels, vectoren met 3 elementen. Als we de afbeelding omzetten van RGB naar **C**yan, **M**agenta, **Y**ellow, **K**ey krijgen we pixels met 4 elementen.\n",
+                ":::"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 18,
+            "id": "2cc3d991",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "(479, 638, 4)"
+                        ]
+                    },
+                    "execution_count": 18,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "np.array(img.convert(\"CMYK\")).shape"
             ]
         }
     ],
