--- a/book/math_foundations/linalg/why_tensors.ipynb
+++ b/book/math_foundations/linalg/why_tensors.ipynb
@@ -11,7 +11,7 @@
                 "**In Machine Learning worden vectoren, matrices en tensors veel algemener gebruikt als _containers_ voor data en model parameters** omwille van:\n",
                 "- computationele efficiëntie\n",
                 "- speciale tensors en tensor-operaties (bv. rotatie-matrices, convolutionele filters, decompositie, enz.)\n",
-                "- compacte notatie"
+                "- compacte notatie (zowel in tekst als programmacode)"
             ]
         },
         {
@@ -21,13 +21,13 @@
             "source": [
                 "## Toepassingen[^NotExhaustive]\n",
                 "[^NotExhaustive]: Dit zijn voorbeelden, dus niet als een exhaustieve lijst te beschouwen.\n",
-                "### Feature matrix voor tabulaire data\n",
-                "In veel gevallen vertrekken we van data in een **tabulair formaat** (denk aan een Excel sheet) waarbij iedere cel voor een bepaalde meting staat bij een bepaald item. Verschillende metingen komen overeen met verschillende kolommen en verschillende items met verschillende rijen."
+                "### Feature matrix voor _tabelgegevens_\n",
+                "In veel gevallen vertrekken we van data in een **tabel formaat** (denk aan een Excel sheet) waarbij iedere cel voor een bepaalde eigenschap staat (bv. lengte, leeftijd) van een bepaald item (bv. student). Verschillende items komen overeen met $m$ verschillende rijen en verschillende eigenschappen met $n$ verschillende kolommen."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 38,
             "id": "2db8458c",
             "metadata": {},
             "outputs": [],
@@ -40,7 +40,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 39,
             "id": "3e7178d8",
             "metadata": {},
             "outputs": [
@@ -68,12 +68,17 @@
             "metadata": {},
             "source": [
                 "\n",
-                "Machine Learning is een zaak van wiskunde en daarom moet alle informatie waarin we patronen willen herkennen vertaald worden naar numerieke waarden. Bij tabulaire data hebben we doorgaans te maken met heel verschillende data-types. Voor sommige data types is de vertaling in numerieke waarden evident, zoals temperatuur of aandelenkoersen, maar in andere gevallen zijn er speciale voorbereidingen nodig. **De manier waarop we informatie vertalen naar numerieke waarden bepaalt heel sterk welke patronen we al dan _niet_ kunnen oppikken met het ML model**. Het is onder andere belangrijk om rekening te houden met volgende aspecten:\n",
-                "- **Meetschaal**:\n",
-                "    - **Nominaal**: De informatie laat toe om items in bepaalde categorieën te plaatsen (bv. \"fruit\" $\\neq$ \"groente\" $\\neq$ \"vlees\" $\\neq$ \"rond\" $\\neq$ \"vierkant\" $\\neq$ $\\ldots$)\n",
-                "    - **Ordinaal**: De informatie laat toe om items te ordenen (bv. \"small\" $<$ \"medium\" $<$ \"large\")\n",
-                "    - **Interval**: De informatie laat toe om de afstand tussen items te bepalen (bv. $45\\degree - 10\\degree = 5\\degree - (-30\\degree)$)\n",
-                "    - **Ratio**: De informatie laat toe om de verhoudingen tussen items te bepalen (bv. $\\frac{120km/h}{60km/h} = \\frac{30km/h}{15km/h}$)\n",
+                "Machine Learning is een zaak van wiskunde en daarom moet **alle informatie waarin we patronen willen herkennen vertaald worden naar numerieke waarden**. Bij tabelgegevens hebben we doorgaans te maken met heel verschillende data-types. Voor sommige data types is de vertaling in numerieke waarden evident, zoals temperatuur of aandelenkoersen, maar in andere gevallen zijn er speciale voorbereidingen nodig. **De manier waarop we informatie vertalen naar numerieke waarden bepaalt heel sterk welke patronen we al dan _niet_ kunnen oppikken met het ML model**. Het is _onder andere_ belangrijk om rekening te houden met volgende aspecten:\n",
+                "- **Meetschaal**\n",
+                "- **Niet-lineariteit**\n",
+                "- **Cyclische informatie**\n",
+                "- **_Missing_ data**\n",
+                "\n",
+                "#### Meetschaal\n",
+                "- **Nominaal**: De informatie laat toe om items in bepaalde categorieën te plaatsen (bv. \"fruit\" $\\neq$ \"groente\" $\\neq$ \"vlees\" $\\neq$ \"rond\" $\\neq$ \"vierkant\" $\\neq$ $\\ldots$)\n",
+                "- **Ordinaal**: De informatie laat toe om items te ordenen (bv. \"small\" $<$ \"medium\" $<$ \"large\")\n",
+                "- **Interval**: De informatie laat toe om de afstand tussen items te bepalen (bv. $45\\degree - 10\\degree = 5\\degree - (-30\\degree)$)\n",
+                "- **Ratio**: De informatie laat toe om de verhoudingen tussen items te bepalen (bv. $\\frac{120km/h}{60km/h} = \\frac{30km/h}{15km/h}$)\n",
                 "\n",
                 ":::{note} Nominale waarden\n",
                 "Om nominale waarden om te zetten in numerieke waarden wordt vaak zogenaamde **_one-hot encoding_** toegepast. Daarbij wordt iedere waarde omgezet in een binaire vector met evenveel dimensies als er _levels_ zijn in de nominale schaal.\n",
@@ -107,18 +112,27 @@
             "id": "1b6c0327",
             "metadata": {},
             "source": [
-                "- **Niet-lineariteit**:\n",
-                "    Op een interval of ratio schaal kunnen we aan de hand van niet lineaire transformaties hetzelfde interval een ander gewicht geven naargelang de positie op de schaal. Voorbeelden zijn logarithmische transformatie, exponentiële transformatie en polynomiale transformatie.\n",
+                "#### Niet-lineariteit\n",
+                "Op een interval of ratio schaal kunnen we aan de hand van niet lineaire transformaties hetzelfde interval een ander gewicht geven naargelang de positie op de schaal. Voorbeelden zijn logarithmische transformatie, exponentiële transformatie en polynomiale transformatie.\n",
                 ":::{note} 🌍 Likes\n",
                 ":icon: false\n",
                 ":class: simple\n",
-                "Als je bijvoorbeeld een model wil maken dat verkoopscijfers voorspelt op basis van likes bij social-media marketing, zou je ervoor kunnen kiezen om een lineaire regressie model te bouwen om de lineaire samenhang uit te drukken (te kwantificeren). In dit geval ga je echter de assumptie inbouwen dat het verschil tussen 1 en 2 likes hetzelfde is als tussen 100 000 en 200 000. In dat geval kan het zijn dat de lineaire samenhang veel beter te vatten is door het aantal likes logarithmisch uit te drukken. \n",
+                "Als je bijvoorbeeld een model wil maken dat verkoopscijfers voorspelt op basis van likes bij social-media marketing, zou je ervoor kunnen kiezen om een lineair regressie model te bouwen om de lineaire samenhang uit te drukken (te kwantificeren). In dit geval ga je echter de assumptie inbouwen dat het verschil tussen 1 en 2 likes hetzelfde is als tussen 100 001 en 100 002. Dat klopt niet met de realiteit. In dat geval kan het zijn dat de lineaire samenhang veel beter te vatten is door het aantal likes logarithmisch uit te drukken.  \n",
+                "\n",
+                "De waarden $\\{0, 10, 100, 10000, 100000, 1000000\\}$ worden dan (met logarithmische basis $10$) $\\{1, 2, 3, 4, 5, 6\\}$. Het verschil tussen $100000$ en $1000000$ likes wordt met andere woorden even groot als het verschil tussen $0$ en $1$.\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "y &= log_10(x)\n",
+                "10^y &= x\n",
+                "\\end{align}\n",
+                "$$\n",
                 ":::"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 40,
             "id": "0a4236ba",
             "metadata": {},
             "outputs": [],
@@ -131,7 +145,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 41,
             "id": "fba63f7c",
             "metadata": {},
             "outputs": [
@@ -250,13 +264,15 @@
             "metadata": {},
             "source": [
                 "\n",
-                "- **Cyclische informatie**:\n",
-                "    Bij bepaalde schalen is er cycliciteit. Denk bijvoorbeeld aan de seizoenen (\"winter\" < \"lente\" < \"zomer\" < \"herfst\" < \"winter\" < ...) of dagen van de week (\"zondag\" < \"maandag\", \"dinsdag\", \"woensdag\", \"donderdag\", \"vrijdag\", \"zaterdag\", \"zondag\", \"maandag\", ...). Als we deze informatie zomaar vertalen naar numerieke waarden (bv. $[0, 1, 2, 3, 4, 5, 6, 0, 1, ...]^T$) maken we een fout door bijvoorbeeld te stellen dat het verschil tussen \"zaterdag\" en \"zondag\" 6 is en tussen \"zondag\" en \"maandag\" 1 of dat \"zaterdag\" $>$ \"zondag\" en \"zondag\" $<$ \"maandag\"."
+                "#### Cyclische informatie\n",
+                "Bij bepaalde schalen is er cycliciteit. Denk bijvoorbeeld aan de seizoenen (\"winter\" < \"lente\" < \"zomer\" < \"herfst\" < \"winter\" < ...) of dagen van de week (\"zondag\" < \"maandag\" < \"dinsdag\" < \"woensdag\" < \"donderdag\" < \"vrijdag\" < \"zaterdag\" < \"zondag\" < \"maandag\", ...). Als we deze informatie zomaar vertalen naar numerieke waarden (bv. $[0, 1, 2, 3, 4, 5, 6, 0, 1, ...]^T$) maken we een fout door bijvoorbeeld te stellen dat het verschil tussen \"zaterdag\" en \"zondag\" 6 is en tussen \"zondag\" en \"maandag\" 1 of dat \"zaterdag\" $>$ \"zondag\" en \"zondag\" $<$ \"maandag\".  \n",
+                "  \n",
+                "We kunnen dit oplossen door een 2-dimensionele matrix representatie van deze data te maken (dus $m \\times 2$ in plaats van $m \\times 1$). Daarbij vertalen we ieder ordinaal _label_ naar een overeenkomstig 2D _coördinaat_ op een cirkel."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 42,
             "id": "57490a00",
             "metadata": {},
             "outputs": [
@@ -428,10 +444,76 @@
             "id": "fb28a2e7",
             "metadata": {},
             "source": [
-                "- **_Missing_ data**:\n",
-                "    In veel tabulaire data sets kan niet voor ieder item steeds de volledige reeks observaties gemaakt worden (denk bijvoorbeeld aan een temperatuursensor die een fout geeft). In sommige gevallen kunnen machine learning algorithmes daar perfect mee om (bv. Decision trees, Kalman Filters), maar veel algorithmes verwachten volledige input. Soms kan beslist worden om alle rijen te verwijderen waarvoor er een of meerdere _missing values_ zijn - als daardoor nog genoeg data overblijft voor het leeralgorithme. Er kan ook beslist worden om die _missing values_ op een zinvolle manier in te vullen (bv. door het gemiddelde van alle observaties). In dat geval spreekt men over **_missing value imputation_**.\n",
-                "\n",
-                "Eens we de informatie waarin we patroonherkenning willen doen vertaald hebben naar numerieke waarden, verzamelen we ze in een _feature matrix/tensor_ met items in de rijen en verschillende features in de kolommen."
+                "#### _Missing_ data\n",
+                "In veel tabelgegevens kan niet voor ieder item steeds de volledige reeks observaties gemaakt worden (denk bijvoorbeeld aan een temperatuursensor die een fout geeft). In sommige gevallen kunnen machine learning algorithmes daar perfect mee om (bv. Decision trees, Kalman Filters), maar veel algorithmes verwachten volledige input. Soms kan beslist worden om alle rijen te verwijderen waarvoor er een of meerdere _missing values_ zijn - als daardoor nog genoeg data overblijft voor het leeralgorithme. Er kan ook beslist worden om die _missing values_ op een zinvolle manier in te vullen (bv. door het gemiddelde van alle observaties). In dat geval spreekt men over **_missing value imputation_**."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 43,
+            "id": "48a886c1",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "nan\n"
+                    ]
+                }
+            ],
+            "source": [
+                "g = np.nan\n",
+                "print(g)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 44,
+            "id": "493776e0",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[ 5.  8. nan  4.]\n",
+                        "[5. 8. 4.]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "a = np.array([5, 8, np.nan, 4])\n",
+                "print(a)\n",
+                "print(a[~np.isnan(a)])  # Filter out NaN values"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 45,
+            "id": "45c7a57a",
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[5.         8.         5.66666667 4.        ]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Missing value imputation: Replace NaN with the mean of non-NaN values\n",
+                "a[np.isnan(a)] = np.mean(a[~np.isnan(a)])\n",
+                "print(a)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "da53b83a",
+            "metadata": {},
+            "source": [
+                "**Eens we de informatie waarin we patroonherkenning willen doen vertaald hebben naar numerieke waarden, verzamelen we ze in een _feature matrix/tensor_ met items in de rijen en verschillende features in de kolommen**."
             ]
         },
         {
@@ -465,7 +547,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 46,
             "id": "715e1cac",
             "metadata": {},
             "outputs": [
